source/settings-page/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
    min-width: 550px;
    min-height: 100px;
    overflow-x: hidden; /* Required to hide horizontal scroll on Firefox */
    /* color: #1f2937; */
    color-scheme: light dark;
}

body {
    /* font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
        "Segoe UI", Roboto; */
    /* font-size: medium; */
    /* font-weight: 500; */
    text-align: left;
    padding: 10px;
    margin: 0;
}

@media (prefers-color-scheme: dark) {
    html {
        background-color: #35363a;
    }
}

/* switch adapted from https://codepen.io/sajran/pen/dMKvpb */
.switch {
    display: inline-block;
    position: relative;
    margin: 0 0 10px 2px;

    --bg-disabled-color: rgba(0, 0, 0, 0.26);
    --bg-enabled-color: rgba(63, 81, 181, 0.5);
    --lever-disabled-color: #fff;
    --lever-enabled-color: #3f51b5;
}
.switch__input {
    position: absolute;
    top: 0;
    left: 0;
    width: 36px;
    height: 20px;
    opacity: 0;
    z-index: 0;
}
/* Unchecked */
.switch__label {
    display: block;
    padding: 0 0 0 35px;
    cursor: pointer;
}
.switch__label::before {
    content: "";
    position: absolute;
    top: 4px; /* tweak this */
    left: 0;
    width: 36px;
    height: 14px;
    background-color: var(--bg-disabled-color);
    border-radius: 14px;
    z-index: 1;
    transition: background-color 0.28s cubic-bezier(0.4, 0, 0.2, 1);
}
.switch__label::after {
    content: "";
    position: absolute;
    top: 1px; /* tweak this */
    left: 0;
    width: 20px;
    height: 20px;
    background-color: var(--lever-disabled-color);
    border-radius: 14px;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
        0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
    z-index: 2;
    transition: all 0.28s cubic-bezier(0.4, 0, 0.2, 1);
    transition-property: left, background-color;
}
/* Checked */
.switch__input:checked + .switch__label::before {
    background-color: var(--bg-enabled-color);
}
.switch__input:checked + .switch__label::after {
    left: 16px;
    background-color: var(--lever-enabled-color);
}

